# interviewpilot

./: .gitignore  AGENTS.md  Makefile  README.md  clean_session.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: AGENTS.md  __init__.py  chat.py  control.py  interview.py  job_position.py  optimize.py  report.py  resume.py  speech.py  websocket.py
backend/app/config/: logging.py  settings.py
backend/app/config/prompts/: end_check_prompt.md  question_prompt.md
backend/app/config/prompts/optimization/: company_optimization.md  interviewer_optimization.md  jd_optimization.md  process_optimization.md  scheme_optimization.md
backend/app/config/prompts/report/: ability_eval.md  chat_summary.md  followup.md  hiring.md  match_analysis.md  pros_cons.md
backend/app/database/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  chat.py  interview.py  job_position.py  report.py
backend/app/services/: __init__.py  llm_service.py  prompt_service.py  report_service.py  resume_parser.py  speech_service.py  websocket_manager.py
backend/data/: interviewpilot.db
docs/: flow-comparison.html  resume-upload-modal.html  schema-design.html
docs/superpowers/: VERIFICATION.md
docs/superpowers/plans/: 2026-04-17-interviewpilot-implementation.md  2026-04-19-ai-optimization-implementation.md  2026-04-20-logging-system-implementation.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
(+22 files in other folders)
