[project]
name = "interviewpilot-backend"
version = "0.1.0"
description = "InterviewPilot Backend - AI Interview Agent System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "openai>=1.0.0",
    "sse-starlette>=1.6.0",
    "httpx>=0.24.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "structlog>=23.1.0",
    "dashscope>=1.14.0",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]